# minesweeper-lib

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
inc/MS/: MS_Bitset.h  MS_GameState.h  MS_Minefield.h  MS_Point.h  MS_Set.h  MS_Tile.h  MS_TileSprite.h  MS_Vector.h  MS_export.h  Minesweeper.h
src/: MS_Minefield.c
